# p2p-service

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: tests.yml
scripts/demo/: docker-compose.yml  sample-config.yml
scripts/docker/: Dockerfile  build-docker-image.sh  run-p2p-service.sh
src/: config.rs  main.rs  metrics.rs
src/http/: mod.rs
src/http/endpoints/: dial.rs  error.rs  hello.rs  identity.rs  mod.rs
src/message_queue/: mod.rs
src/p2p/: network.rs
