[package]
name = "aleph-p2p-service"
version = "0.1.4-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.26", features = ["derive"] }
env_logger = "0.11.6"
futures = "0.3.31"
lapin = "2.5.0"
libp2p = { version = "0.51.3", features = ["dns", "gossipsub", "macros", "noise", "rsa", "serde", "tcp", "tokio", "yamux"] }
libp2p-mplex = "0.39.0"
log = "0.4.22"
# Note: by default, the sentry package requires OpenSSL. We use rustls instead to avoid depending on system packages.
sentry = { version = "0.31.0", features = ["log", "panic", "reqwest", "rustls"], default-features = false }
sentry-actix = "0.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["time"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
void = "1.0.2"
